--- a/index.html
+++ b/index.html
@@ -211,7 +211,7 @@
 		var total = 0;
 		var Mic = 450;
 		var Mare = 500; // grams
-		var ppgr = 300 / 500; // pixels per gram
+		var ppgr = canvas_h / 500; // pixels per gram
 		var ingredients = [];
 
 		function show_total(name) {
