Colors of ingredients added

--- a/index.html
+++ b/index.html
@@ -153,15 +153,15 @@
 		const idx_mony = 3;
 		const idx_func_add = 4;
 
-		var Portocale = ["Portocale.png", 'green', 100, 3, function() {add_fruit_param('Portocale');} ];
-		var Mar = ["Mar.png", 'green', 100, 2, function() {add_fruit_param('Mar');} ];
-		var Banane = ["Banane.png", 'green', 100, 3, function() {add_fruit_param('Banane');} ];
-		var Lamaie = ["Lamaie.png", 'green', 50, 2, function() {add_fruit_param('Lamaie');} ];
-		var Lime = ["Lime.png", 'green', 20, 2, function() {add_fruit_param('Lime');} ];
-		var Kiwi = ["Kiwi.png", 'green', 100, 4, function() {add_fruit_param('Kiwi');} ];
-		var Ananas = ["Ananas.png", 'green', 100, 4, function() {add_fruit_param('Ananas');} ];
-		var Cocos = ["Cocos.png", 'green', 20, 3, function() {add_fruit_param('Cocos');} ];
-		var Grapefruit = ["Grapefruit.png", 'green', 100, 3, function() {add_fruit_param('Grapefruit');} ];
+		var Portocale = ["Portocale.png", 'orange', 100, 3, function() {add_fruit_param('Portocale');} ];
+		var Mar = ["Mar.png", '#8db600', 100, 2, function() {add_fruit_param('Mar');} ];
+		var Banane = ["Banane.png", '#ffe135', 100, 3, function() {add_fruit_param('Banane');} ];
+		var Lamaie = ["Lamaie.png", '#fff700', 50, 2, function() {add_fruit_param('Lamaie');} ];
+		var Lime = ["Lime.png", '#bfff00', 20, 2, function() {add_fruit_param('Lime');} ];
+		var Kiwi = ["Kiwi.png", '#8ee53f', 100, 4, function() {add_fruit_param('Kiwi');} ];
+		var Ananas = ["Ananas.png", '#fee88f', 100, 4, function() {add_fruit_param('Ananas');} ];
+		var Cocos = ["Cocos.png", 'white', 20, 3, function() {add_fruit_param('Cocos');} ];
+		var Grapefruit = ["Grapefruit.png", '#ff6677', 100, 3, function() {add_fruit_param('Grapefruit');} ];
 
 		make_button("Portocale");
 		make_button("Mar");
@@ -172,18 +172,18 @@
 		make_button("Cocos");
 		make_button("Grapefruit");
 
-		var Castravete = ["Castravete.png", 'green', 100, 3, function() {add_fruit_param('Castravete');} ];
-		var Morcov = ["Morcov.png", 'green', 100, 3, function() {add_fruit_param('Morcov');} ];
-		var Sfecla = ["Sfecla.png", 'green', 50, 2, function() {add_fruit_param('Sfecla');} ];
+		var Castravete = ["Castravete.png", '#8ABB55', 100, 3, function() {add_fruit_param('Castravete');} ];
+		var Morcov = ["Morcov.png", '#d74e26', 100, 3, function() {add_fruit_param('Morcov');} ];
+		var Sfecla = ["Sfecla.png", '#7A1F3D', 50, 2, function() {add_fruit_param('Sfecla');} ];
 
 		make_button("Castravete");
 		make_button("Morcov");
 		make_button("Sfecla");
 
-		var Spanac = ["Spanac.png", 'green', 50, 3, function() {add_fruit_param('Spanac');} ];
-		var Kale = ["Kale.png", 'green', 50, 4, function() {add_fruit_param('Kale');} ];
-		var Menta = ["Menta.png", 'green', 5, 2, function() {add_fruit_param('Menta');} ];
-		var Telina = ["Telina.png", 'green', 100, 4, function() {add_fruit_param('Telina');} ];
+		var Spanac = ["Spanac.png", '#288568', 50, 3, function() {add_fruit_param('Spanac');} ];
+		var Kale = ["Kale.png", '#61774F', 50, 4, function() {add_fruit_param('Kale');} ];
+		var Menta = ["Menta.png", '#98FF98', 5, 2, function() {add_fruit_param('Menta');} ];
+		var Telina = ["Telina.png", '#ABB858', 100, 4, function() {add_fruit_param('Telina');} ];
 		var Patrunjel = ["Patrunjel.png", 'green', 20, 2, function() {add_fruit_param('Patrunjel');} ];
 
 		make_button("Spanac");
@@ -192,11 +192,11 @@
 		make_button("Telina");
 		make_button("Patrunjel");
 
-		var Chia = ["Chia.png", 'green', 10, 2, function() {add_fruit_param('Chia');} ];
-		var Scortisoara = ["Scortisoara.png", 'green', 5, 2, function() {add_fruit_param('Scortisoara');} ];
-		var Ghimbir = ["Ghimbir.png", 'green', 10, 2, function() {add_fruit_param('Ghimbir');} ];
-		var Canepa = ["Canepa.png", 'green', 10, 2, function() {add_fruit_param('Canepa');} ];
-		var Turmeric = ["Turmeric.png", 'green', 5, 2, function() {add_fruit_param('Turmeric');} ];
+		var Chia = ["Chia.png", '#847a6e', 10, 2, function() {add_fruit_param('Chia');} ];
+		var Scortisoara = ["Scortisoara.png", '#C58917', 5, 2, function() {add_fruit_param('Scortisoara');} ];
+		var Ghimbir = ["Ghimbir.png", '#cd5700', 10, 2, function() {add_fruit_param('Ghimbir');} ];
+		var Canepa = ["Canepa.png", '#A18176', 10, 2, function() {add_fruit_param('Canepa');} ];
+		var Turmeric = ["Turmeric.png", '#B19141', 5, 2, function() {add_fruit_param('Turmeric');} ];
 
 		make_button("Chia");
 		make_button("Scortisoara");
