--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
 		.group {
 			float: left;
 			width: 18%;
-			height: 800px;
+			height: 700px;
 			align-items: center;
 			padding-top: 40px;
 		}
@@ -26,13 +26,13 @@
 		.comanda {
 			position: relative;
 			width: 28%;
-			height: 800px;
+			height: 700px;
 			float: right;
 			padding-top: 29px;
 			background-color: #f2f2f2;
 		}
 		.comanda .title {
-			padding-bottom: 50px;
+			padding-bottom: 20px;
 			display: block;
 			margin-left: auto;
 			margin-right: auto;
@@ -68,10 +68,10 @@
 
 			background-image: url('arch.png');
 			background-size: cover;
-			padding-top: 30px;
+			padding-top: 15px;
 		}
 		.list {
-			text-align: justify;
+			text-align: right;
 			text-justify: inter-word;
 		}
 	</style>
@@ -80,6 +80,8 @@
 	<div>
 		<div class="group" style="background-color: #ffefae;">
 			<img src="fructe.png" class="title">
+
+			<br><br>
 
 			<img id="Portocale"/>
 			<img id="Mar"/>
@@ -94,12 +96,16 @@
 		<div class="group" style="background-color: #ffdac1;">
 			<img src="legume.png" class="title">
 
+			<br><br>
+
 			<img id="Castravete"/>
 			<img id="Morcov"/>
 			<img id="Sfecla"/>
 		</div>
 		<div class="group" style="background-color: #e9f5d8;">
 			<img src="verdeturi.png" class="title">
+
+			<br><br>
 
 			<img id="Spanac"/>
 			<img id="Kale"/>
@@ -109,6 +115,8 @@
 		</div>
 		<div class="group" style="background-color: #e1f5fc;">
 			<img src="specials.png" class="title">
+
+			<br><br>
 
 			<img id="Chia"/>
 			<img id="Scortisoara"/>
@@ -120,7 +128,7 @@
 	<div>
 
   <div class="comanda">
-	<img src="moodfresh.png" class="title" style="padding-bottom: 50px;">
+	<img src="moodfresh.png" class="title">
 	<div  class="filling-cup">
 		<canvas id="canvas" width="120" height="216" style="position:absolute;">
 			Pahar
@@ -139,8 +147,8 @@
 		<p>
 			<b><font id="total" size="+1" color="#878fa3">0 RON</font></b>
 		</p>
-		<div style="display: inline; width: 90%;">
-			<input id="x" src="elimina.png" onclick="remove_fruit();" type="image" style="float:left;"/>
+		<div style="display: inline; width: 95%;">
+			<img id="x" src="elimina.png" onclick="remove_fruit();" style="float:left;"/>
 			<img id="cmd" src="comanda_gray.png" onclick="toggleImage();" style="float:right;"/>
 		</div>
 	</div>
