--- a/index.html
+++ b/index.html
@@ -232,7 +232,7 @@
 				tot_sum.innerHTML += ingredients[i] + ' ' + ingredients[i+1] + ' ml.' + "<br />";
 			}
 			tot_sum.innerHTML += "-------<br />";
-			tot_sum.innerHTML += total + ' ml.';
+			tot_sum.innerHTML += level + ' ml.';
 		}
 
 		function order_green() {
