Ananas was missing

--- a/index.html
+++ b/index.html
@@ -189,6 +189,7 @@
 		make_button("Lamaie");
 		make_button("Lime");
 		make_button("Kiwi");
+		make_button("Ananas");
 		make_button("Cocos");
 		make_button("Grapefruit");
 
