on iPad, canvas does not fit cup. Order made gray below minimum level.

--- a/index.html
+++ b/index.html
@@ -131,7 +131,7 @@
   <div class="comanda">
 	<img src="moodfresh.png" class="comanda_title">
 	<div  class="filling-cup">
-		<canvas id="canvas" width="120" height="216" style="position:absolute;">
+		<canvas id="canvas" width="120" height="220" style="position:absolute;">
 			Pahar
 		</canvas>
 		<img src="pahar.png" style="position:relative;">
@@ -290,7 +290,7 @@
 				total -= price;
 				show_total(name);
 			}
-			if ( level < Mare - gr ) {
+			if ( level < Mic ) {
 				order_gray();
 			}
 			else {
