--- a/index.html
+++ b/index.html
@@ -71,6 +71,12 @@
 			padding-top: 15px;
 			padding-bottom: 10px;
 		}
+		.total_text {
+			font-family: Arial, Helvetica, sans-serif;
+			font-size:20px;
+			color: #878fa3;
+			font-weight: bold;
+		}
 		.list {
 			text-align: right;
 			text-justify: inter-word;
@@ -158,7 +164,7 @@
 	<div class="bottom">
 		<img src="pret.png">
 		<div style="padding-bottom: 7px;"></div>
-		<b><font id="total" size="+1" color="#878fa3">0 RON</font></b>
+		<div id="total" class="total_text">0 RON</div>
 		<div style="padding-bottom: 9px;"></div>
 		<div style="display: inline; width: 95%;">
 			<img id="x" src="elimina.png" onclick="remove_fruit();" style="float:left;"/>
