bell sound on order

--- a/index.html
+++ b/index.html
@@ -185,7 +185,7 @@
 			<div style="padding-bottom: 9px;"></div>
 			<div style="display: inline; width: 95%;">
 				<img id="x" src="elimina.png" onclick="remove_fruit();" style="float:left;"/>
-				<img id="cmd" src="comanda_gray.png" onclick="toggleImage();" style="float:right;"/>
+				<img id="cmd" src="comanda_gray.png" onclick="bell();" style="float:right;"/>
 			</div>
 		</div>
 	</div>
